--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://socketo.github.io/404.html">
+<link rel="canonical" href="http://localhost:1313/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.f49d66caae9ea0fd43f21f29e71a8d3e284517ed770f2aa86fa012953ad3c9ef.css" integrity="sha256-9J1myq6eoP1D8h8p5xqNPihFF&#43;13Dyqob6ASlTrTye8=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://socketo.github.io/images/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://socketo.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://socketo.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://socketo.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="https://socketo.github.io/safari-pinned-tab.svg">
+<link rel="icon" href="http://localhost:1313/images/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
+<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="https://socketo.github.io/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,7 +55,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://socketo.github.io/404.html">
+</noscript><meta property="og:url" content="http://localhost:1313/404.html">
   <meta property="og:site_name" content="socketo.github.io">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:locale" content="ja">
@@ -82,7 +82,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://socketo.github.io/" accesskey="h" title="socketo.github.io (Alt + H)">socketo.github.io</a>
+            <a href="http://localhost:1313/" accesskey="h" title="socketo.github.io (Alt + H)">socketo.github.io</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)" aria-label="Toggle theme">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -108,17 +108,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://socketo.github.io/archives" title="archives">
+                <a href="http://localhost:1313/archives" title="archives">
                     <span><i class='fa fa-heart'></i>archives</span>
                 </a>
             </li>
             <li>
-                <a href="https://socketo.github.io/tags" title="tags">
+                <a href="http://localhost:1313/tags" title="tags">
                     <span><i class='fa fa-heart'></i>tags</span>
                 </a>
             </li>
             <li>
-                <a href="https://socketo.github.io/about" title="about">
+                <a href="http://localhost:1313/about" title="about">
                     <span><i class='fa fa-heart'></i>about</span>
                 </a>
             </li>
@@ -130,7 +130,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://socketo.github.io/">socketo.github.io</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/">socketo.github.io</a></span> · 
 
     <span>
         Powered by
